update dados pessoais

--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
             class="section-description text-justify about-desc"
             data-aos="fade-left"
           >
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id illo
-            inventore facilis eius quaerat voluptatibus consequatur alias enim
-            facere, architecto quidem in nisi tempore explicabo est maxime odio
-            magni necessitatibus?
+          2 anos de experiência em desenvolvimento web, vivência no processo ágil. 
+          Minha especialidade é frontend com react, porém já participei de projetos 
+          100% automatizados (backend).
           </p>
         </div>
       </div>
@@ -164,12 +163,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 75%"
-                    aria-valuenow="75"
+                    style="width: 85%"
+                    aria-valuenow="85"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">75%</span>
+                  <span class="progress-value">85%</span>
                 </div>
               </div>
             </div>
@@ -244,12 +243,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 65%"
-                    aria-valuenow="65"
+                    style="width: 40%"
+                    aria-valuenow="40"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">65%</span>
+                  <span class="progress-value">40%</span>
                 </div>
               </div>
             </div>
@@ -284,12 +283,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 65%"
-                    aria-valuenow="65"
+                    style="width: 40%"
+                    aria-valuenow="40"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">65%</span>
+                  <span class="progress-value">40%</span>
                 </div>
               </div>
             </div>
@@ -303,12 +302,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 65%"
-                    aria-valuenow="65"
+                    style="width: 50%"
+                    aria-valuenow="50"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">65%</span>
+                  <span class="progress-value">50%</span>
                 </div>
               </div>
             </div>
@@ -322,12 +321,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 75%"
-                    aria-valuenow="75"
+                    style="width: 60%"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">75%</span>
+                  <span class="progress-value">60%</span>
                 </div>
               </div>
             </div>
@@ -341,12 +340,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 70%"
-                    aria-valuenow="70"
+                    style="width: 60%"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">70%</span>
+                  <span class="progress-value">60%</span>
                 </div>
               </div>
             </div>
@@ -400,7 +399,7 @@
             <div
               class="card-body exp-card-header flex-column d-flex justify-content-center"
             >
-              <p>Em curso</p>
+              <p>Completo</p>
               <div class="h5">Graduação</div>
             </div>
           </div>
@@ -468,7 +467,7 @@
           <div class="col-md-9" data-aos="fade-up-left">
             <div class="card-body">
               <div class="title h4">
-                React Native: Desenvolva APPs Nativas para Android e iOS
+                React Native: Desenvolva APPs Nativos para Android e iOS
               </div>
               <p class="office">Curso por Cod3r Cursos Online</p>
             </div>
@@ -507,15 +506,68 @@
                 <div
                   class="card-body exp-card-header flex-column d-flex justify-content-center"
                 >
-                  <p>09/03/2021 Atualmente</p>
+                  <p>2018 - 2019</p>
+                </div>
+              </div>
+              <div class="col-md-9" data-aos="fade-left">
+                <div class="card-body">
+                  <div class="title h4">DigiTI</div>
+                  <p class="office">Estágio de Desenvolvimento</p>
+                  <p class="description text-justify">
+                    Primeiros contatos com mundo web, onde aprendi a desenvolver interfaces modernas e ricas.
+                    Principais tecnologias: Node e React.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="row">
+              <div class="col-md-3" data-aos="fade-right">
+                <div
+                  class="card-body exp-card-header flex-column d-flex justify-content-center"
+                >
+                  <p>2019 - 2020</p>
+                </div>
+              </div>
+              <div class="col-md-9" data-aos="fade-left">
+                <div class="card-body">
+                  <div class="title h4">GoHealth</div>
+                  <p class="office">Front-end Developer </p>
+                  <p class="description text-justify">
+                    Startup com foco em saúde e beleza. Aprendi técnicas de UX para suavizar e enriquecer componentes visuais. 
+                    Principais tecnologias: React e React Native.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="row">
+              <div class="col-md-3" data-aos="fade-right">
+                <div
+                  class="card-body exp-card-header flex-column d-flex justify-content-center"
+                >
+                  <p>2020 - 2021</p>
                 </div>
               </div>
               <div class="col-md-9" data-aos="fade-left">
                 <div class="card-body">
                   <div class="title h4">Tron Informática</div>
-                  <p class="office">Estagiário em Desenvolvimento</p>
+                  <p class="office">Full Stack Developer</p>
                   <p class="description text-justify">
-                    Faço parte do time de Inovação da Tron onde atuo como desenvoldedor Web, Mobile e Desktop.
+                    Faço parte do time de Inovação onde atuo como desenvoldedor full stack. <br />
+                    Utilizo as tecnologias mais atuais no mercado como: ReactJS, React Native e NodeJS
                   </p>
                 </div>
               </div>
