--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="col-md-6">
               <div class="skill">
-                <span class="skill-name">.NET</span>
+                <span class="skill-name">Oracle</span>
                 <div class="progress">
                   <div
                     data-aos="progress-full"
@@ -243,12 +243,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 40%"
-                    aria-valuenow="40"
+                    style="width: 60%"
+                    aria-valuenow="60"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">40%</span>
+                  <span class="progress-value">60%</span>
                 </div>
               </div>
             </div>
@@ -275,44 +275,6 @@
             </div>
             <div class="col-md-6">
               <div class="skill">
-                <span class="skill-name">C#</span>
-                <div class="progress">
-                  <div
-                    data-aos="progress-full"
-                    data-aos-offset="10"
-                    data-aos-duration="2000"
-                    class="progress-bar"
-                    role="progressbar"
-                    style="width: 40%"
-                    aria-valuenow="40"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                  <span class="progress-value">40%</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="skill">
-                <span class="skill-name">Java</span>
-                <div class="progress">
-                  <div
-                    data-aos="progress-full"
-                    data-aos-offset="10"
-                    data-aos-duration="2000"
-                    class="progress-bar"
-                    role="progressbar"
-                    style="width: 50%"
-                    aria-valuenow="50"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                  <span class="progress-value">50%</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="skill">
                 <span class="skill-name">PostgreSQL</span>
                 <div class="progress">
                   <div
@@ -321,12 +283,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 60%"
-                    aria-valuenow="60"
+                    style="width: 90%"
+                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">60%</span>
+                  <span class="progress-value">90%</span>
                 </div>
               </div>
             </div>
@@ -340,50 +302,12 @@
                     data-aos-duration="2000"
                     class="progress-bar"
                     role="progressbar"
-                    style="width: 60%"
-                    aria-valuenow="60"
+                    style="width: 90%"
+                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
-                  <span class="progress-value">60%</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="skill">
-                <span class="skill-name">Sequelize</span>
-                <div class="progress">
-                  <div
-                    data-aos="progress-full"
-                    data-aos-offset="10"
-                    data-aos-duration="2000"
-                    class="progress-bar"
-                    role="progressbar"
-                    style="width: 65%"
-                    aria-valuenow="65"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                  <span class="progress-value">65%</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="skill">
-                <span class="skill-name">SQLite</span>
-                <div class="progress">
-                  <div
-                    data-aos="progress-full"
-                    data-aos-offset="10"
-                    data-aos-duration="2000"
-                    class="progress-bar"
-                    role="progressbar"
-                    style="width: 65%"
-                    aria-valuenow="65"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                  <span class="progress-value">65%</span>
+                  <span class="progress-value">90%</span>
                 </div>
               </div>
             </div>
@@ -408,6 +332,26 @@
               <div class="title h4">Análise e Desenvolvimento de Sistemas</div>
               <p class="office">
                 Serviço Nacional de Aprendizagem Comercial (SENAC) - GO
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-md-3" data-aos="fade-down-right">
+            <div
+              class="card-body exp-card-header flex-column d-flex justify-content-center"
+            >
+              <p>Em Curso - 40%</p>
+              <div class="h5">Certificado</div>
+            </div>
+          </div>
+          <div class="col-md-9" data-aos="fade-down-left">
+            <div class="card-body">
+              <div class="title h4">Next.js e React - Curso Completo 2021 - Aprenda com Projetos</div>
+              <p class="office">
+                COD3R Cursos online
               </p>
             </div>
           </div>
@@ -449,7 +393,7 @@
               <div class="title h4">
                 Web Moderno Completo com JavaScript 2021 + Projetos
               </div>
-              <p class="office">Curso por Cod3r Cursos Online</p>
+              <p class="office">Cod3r Cursos Online</p>
             </div>
           </div>
         </div>
@@ -579,22 +523,7 @@
     <section class="section container" id="projects">
       <h2 class="header">Projetos</h2>
       <div class="row">
-        <div class="col-sm-6 col-md-4 mt-2" data-aos="flip-left">
-          <div class="card text-center h-100">
-            <img src="assets/img/mimic.jpg" class="card-img" alt="..." />
-            <div class="card-body">
-              <h3 class="text-uppercase">MIMIC - Palavra</h3>
-              API de Mimica de palavras desenvolvida em Asp.Net Core 5 para o curso Spacedu<br />
-              <ul class="social">
-                <li>
-                  <a href="https://github.com/AlisonMarques/MimicAPI"
-                    ><i class="fab fa-github"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        
         <div class="col-sm-6 col-md-4 mt-2" data-aos="flip-left">
           <div class="card text-center h-100">
             <img src="assets/img/bethehero.png" class="card-img" alt="..." />
@@ -641,16 +570,32 @@
         </div>
         <div class="col-sm-6 col-md-4 mt-2" data-aos="flip-left">
           <div class="card text-center h-100">
-            <img src="assets/img/tasks.png" class="card-img" alt="..." />
+            <img src="assets/img/CRUD.jpg" class="card-img-crud" alt="..." />
             <div class="card-body">
-              <h3 class="text-uppercase">Tarefas</h3>
-              API de tarefas desenvolvida em Asp.Net Core 5 para o curso Spacedu<br />
+              <h3 class="text-uppercase">CRUD</h3>
+              API REST com NodeJS, Express, MongoDB e Autenticação JWT<br />
               <ul class="social">
                 <li>
-                  <a href="https://github.com/AlisonMarques/MyTasks-API"
+                  <a href="https://github.com/AlisonMarques/API-REST"
                     ><i class="fab fa-github"></i
                   ></a>
                 </li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 mt-2" data-aos="flip-left">
+          <div class="card text-center h-100">
+            <img src="assets/img/mimic.jpg" class="card-img" alt="..." />
+            <div class="card-body">
+              <h3 class="text-uppercase">MIMIC - Palavra</h3>
+              API de Mimica de palavras desenvolvida em Asp.Net Core 5 para o curso Spacedu<br />
+              <ul class="social">
+                <li>
+                  <a href="https://github.com/AlisonMarques/MimicAPI"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
               </ul>
             </div>
@@ -675,24 +620,6 @@
                     href="https://github.com/AlisonMarques/Tasks-API"
                     target="_blank"
                     >Backend:<i class="fab fa-github"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 mt-2" data-aos="flip-left">
-          <div class="card text-center h-100">
-            <img src="assets/img/calculadora.png" class="card-img" alt="..." />
-            <div class="card-body">
-              <h3 class="text-uppercase">Calculadora</h3>
-              Calculadora Simples em Java para Android<br />
-              <ul class="social">
-                <li>
-                  <a
-                    href="https://github.com/AlisonMarques/Calculadora-Simples"
-                    target="_blank"
-                    ><i class="fab fa-github"></i
                   ></a>
                 </li>
               </ul>
